internal/controller/testdata/capapplication/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  generation: 1
  annotations:
    sme.sap.com/btp-app-identifier: btp-glo-acc-id.test-cap-01
  labels:
    sme.sap.com/btp-app-identifier-hash: f20cc8aeb2003b3abc33f749a16bd53544b6bab2
  name: test-cap-01-gw
  namespace: default
  ownerReferences:
    - apiVersion: sme.sap.com/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: CAPApplication
      name: test-cap-01
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
    - hosts:
        - "*.app-domain.test.local"
      port:
        name: app-domain.test.local
        number: 443
        protocol: HTTPS
      tls:
        credentialName: default--test-cap-01-secret
        mode: SIMPLE
